--- a/src/styles.css
+++ b/src/styles.css
@@ -58,3 +58,6 @@ h3{font-size: 20pt;
 display:inline;}
 h3.underline{text-decoration: underline;
 display:inline;}
+h4{font-size:10pt;
+text-align:center;
+}
